Finished Desctop Version

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
     <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -135,7 +136,7 @@
         <div class="project-items" data-css-animate="trigger">
             <div class="row no-gutters achievements-row" data-projectsAutocount="container">
                 <div class="col-sm-12 col-md-4">
-                    <div class="project-item ">
+                    <div class="project-item tild-effect" tild-effect>
                         <h3>Performed Projects</h3>
                         <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="1" data-to="15">15</span></p>
                     </div>
