--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
