--- a/career.html
+++ b/career.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="tilt.jquery.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -30,135 +32,198 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
+
 </head>
 <body>
 
-<div class="cj-container">
-    <div class="go-to-top" data-go-to-top="btn">
-        <img src="img/arrowGoToTop.png" alt="go to top">
-    </div>
-</div>
-
-<header class="header">
-    <div class="header-container">
-        <div class="logo">
-            <a href="index.html"><img src="img/logotype.png" alt="Logoipe"></a>
-        </div>
-        <button class="menu-control external">
-            <span></span>
-        </button>
-        <div class="header-controls">
-            <p class="header-controls-title">CoinJapan</p>
-            <nav class="header-navigation">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="partners.html">Partners</a></li>
-                    <li><a class="active-nav-item" href="career.html">Carriers</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
-                    <li><a href="#">News</a></li>
-                </ul>
-            </nav>
-            <div class="header-lang-btn">
-                <div class="current-lang">en</div>
-                <div class="lang-icon"></div>
-            </div>
-            <ul class="header-languages">
-                <li><a href="#"><span>ru</span></a></li>
-            </ul>
-        </div>
-    </div>
-</header><!-- HEADER -->
-
-<section class="page-title contacts-title-bg" data-parallax="scroll">
-    <div class="page-titke-overlay">
-        <div class="cj-container">
-            <h1>Careers</h1>
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contacts.html">Careers</a></li>
-            </ul>
-        </div>
-    </div>
-</section><!-- TITLE -->
-
-<section class="career-page-about">
     <div class="cj-container">
-        <h2 class="section-header" data-css-animate="trigger">What we do</h2>
-        <div class="career-page-about-wrapper row no-gutters">
-            <div class="col-md-6">
-                <article>
-                    <p>Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare.Pellentesque pulvinar pellentesque</p>
-                </article>
-            </div>
-            <div class="col-md-6">
-                <img src="img/DSC_3253.jpg" alt="side img">
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="career-page-positions">
-    <div class="cj-container">
-        <h2 class="section-header" data-css-animate="trigger">Open positions in CoinJapan</h2>
-        <div class="positions-wrapper">
-            <div class="position row no-gutters">
-                <div class="col-md-12">
-                    <h3>Japanese Translator</h3>
-                </div>
-                <div class="col-md-2">
-                    <p>Location: Ukraine, Kiev</p>
-                </div>
-                <div class="col-md-2">
-                    <p>Date: 2018/04/01</p>
-                </div>
-                <div class="col-md-8">
-                    <p>Department: Operation</p>
-                </div>
-                <div class="col-md-12">
-                    <p>Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam id diam maecenas ultricies mi eget mauris pharetra. Non diam phasellus vestibulum lorem sed risus ultricies. Ut venenatis tellus in </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="">
-
-</section>
-
-
-<footer class="footer">
-    <div class="footer-container">
-        <div class="row">
-            <div class="col-12">
-                <span class="footer-connect-us">Connect with us</span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="social-links">
-                    <a href="#" class="fb-icon"></a>
-                    <a href="#" class="twitter-icon"></a>
-                    <a href="#" class="telegram-icon"></a>
-                    <a href="#" class="youtube-icon"></a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="copyright">© 2018 CoinJapan</div>
-            </div>
-        </div>
-        <div class="footer-go-to-top" data-go-to-top="btn">
+        <div class="go-to-top" data-go-to-top="btn">
             <img src="img/arrowGoToTop.png" alt="go to top">
         </div>
     </div>
-</footer>
 
-<div id="preloader"></div>
-<script src="js/main.js"></script>
+    <header class="header">
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html"><img src="img/logotype.png" alt="Logoipe"></a>
+            </div>
+            <button class="menu-control external">
+                <span></span>
+            </button>
+            <div class="header-controls">
+                <p class="header-controls-title">CoinJapan</p>
+                <nav class="header-navigation">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="partners.html">Partners</a></li>
+                        <li><a class="active-nav-item" href="career.html">Carriers</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="#">News</a></li>
+                    </ul>
+                </nav>
+                <div class="header-lang-btn">
+                    <div class="current-lang">en</div>
+                    <div class="lang-icon"></div>
+                </div>
+                <ul class="header-languages">
+                    <li><a href="#"><span>ru</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </header><!-- HEADER -->
+
+    <section class="page-title contacts-title-bg" data-parallax="scroll">
+        <div class="page-titke-overlay">
+            <div class="cj-container">
+                <h1>Careers</h1>
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contacts.html">Careers</a></li>
+                </ul>
+            </div>
+        </div>
+    </section><!-- TITLE -->
+
+    <section class="career-page-about">
+        <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">What we do</h2>
+            <div class="career-page-about-wrapper row no-gutters">
+                <div class="col-md-6">
+                    <article>
+                        <p>Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare.Pellentesque pulvinar pellentesque</p>
+                    </article>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/DSC_3253.jpg" alt="side img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="career-page-positions">
+        <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">Open positions in CoinJapan</h2>
+            <div class="positions-wrapper">
+                <div class="position-item row no-gutters">
+                    <div class="col-md-12 position-title">
+                        <h3>Japanese Translator</h3>
+                    </div>
+                    <div class="col-md-2 position-location">
+                        <p>Location: Ukraine, Kiev</p>
+                    </div>
+                    <div class="col-md-2 position-date">
+                        <p>Date: 2018/04/01</p>
+                    </div>
+                    <div class="col-md-8 position-department">
+                        <p>Department: Operation</p>
+                    </div>
+                    <div class="col-md-9 position-description">
+                        <p>CoinJapan Kiev Office is looking for skilled Japanese, English and Russian speaking interpreters/translators to support the Senior management. As a successful candidate you’ll be working with various senior managers and business functions within CoinJapan Kiev and the wider CoinJapan environment. Providing interpretation and translation support for all manner of meetings, chats, calls, and documentation. You will be a crucial support to senior managers and core business functions that make CoinJapan a global leader in the Cryptocurrency sector.  </p>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="cj-btn-container">
+                            <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="position-item row no-gutters">
+                    <div class="col-md-12 position-title">
+                        <h3>Japanese Translator</h3>
+                    </div>
+                    <div class="col-md-2 position-location">
+                        <p>Location: Ukraine, Kiev</p>
+                    </div>
+                    <div class="col-md-2 position-date">
+                        <p>Date: 2018/04/01</p>
+                    </div>
+                    <div class="col-md-8 position-department">
+                        <p>Department: Operation</p>
+                    </div>
+                    <div class="col-md-9 position-description">
+                        <p>CoinJapan Kiev Office is looking for skilled Japanese, English and Russian speaking interpreters/translators to support the Senior management. As a successful candidate you’ll be working with various senior managers and business functions within CoinJapan Kiev and the wider CoinJapan environment. Providing interpretation and translation support for all manner of meetings, chats, calls, and documentation. You will be a crucial support to senior managers and core business functions that make CoinJapan a global leader in the Cryptocurrency sector.  </p>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="cj-btn-container">
+                            <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="career-page-core-values">
+        <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">Open positions in CoinJapan</h2>
+            <div class="row no-gutters core-value-wrapper">
+                <div class="col-md-4 core-value-item">
+                    <h3 class="core-value-title">Move fast</h3>
+                    <div class="core-value-image">
+                        <img class="tild-effect" data-tilt src="img/move-fast.png" alt="Move fast">
+                    </div>
+                </div>
+                <div class="col-md-4 core-value-item">
+                    <h3 class="core-value-title">Make a brave decision</h3>
+                    <div class="core-value-image">
+                        <img class="tild-effect" data-tilt src="img/make-brave-decision.png" alt="Make a brave decision">
+                    </div>
+                </div>
+                <div class="col-md-4 core-value-item">
+                    <h3 class="core-value-title">Share your knowledge</h3>
+                    <div class="core-value-image">
+                        <img class="tild-effect" data-tilt src="img/share-ypu-knowladge.png" alt="Share your knowledge">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="career-page-culture">
+        <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">Our culture</h2>
+            <article class="culture-description-wrapper">
+                <p>Doing business in Japan is primarily related to people, who are the carriers of another, very different culture. CoinJapan is a company that is fully imbued with Japanese culture and business practices.
+
+                    Our main goal is not the number of clients, but the quality of services which are brought to perfection. It includes a perfect preparation of conditions for the company's successful entry into the Japanese investment market. The only evaluation that is important to us is attracting Japanese investments through the ICO.
+
+                The CoinJapan team consists of enthusiastic experts, who are improving their skills and developing new ones. We have learned from mistakes of others companies, that were made during their campaigns, examine marketing strategies of successful campaigns that conquered the Japanese market and look for new solutions to guarantee your success in the Japanese market.</p>
+            </article>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="row">
+                <div class="col-12">
+                    <span class="footer-connect-us">Connect with us</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="social-links">
+                        <a href="#" class="fb-icon"></a>
+                        <a href="#" class="twitter-icon"></a>
+                        <a href="#" class="telegram-icon"></a>
+                        <a href="#" class="youtube-icon"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="copyright">© 2018 CoinJapan</div>
+                </div>
+            </div>
+            <div class="footer-go-to-top" data-go-to-top="btn">
+                <img src="img/arrowGoToTop.png" alt="go to top">
+            </div>
+        </div>
+    </footer>
+
+    <div id="preloader"></div>
+    <script src="js/main.js"></script>
 </body>
 </html>
