--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/contacts.css">
-    <!-- <link rel="stylesheet" href="css/projects.css"> -->
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -27,8 +26,8 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-    <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -39,7 +38,6 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-    <!-- <script type="text/javascript" src="js/paralax.js"></script> -->
 </head>
 <body>
     <div class="cj-container">
@@ -81,7 +79,7 @@
         </div>
     </header><!-- HEADER -->
 
-    <section class="page-title contacts-title-bg" data-parallax="scroll">
+    <section class="page-title contacts-title-bg"  data-parallax="scroll">
         <div class="page-titke-overlay">
             <div class="cj-container">
                 <h1>Contacts</h1>
@@ -121,7 +119,7 @@
     	<div class="cj-container">
     		<h2 class="section-header" data-css-animate="trigger">Let's keep in touch</h2>
             <div class="row no-gutters contact-form-padding">
-                <div class="col-md-6  offset-md-3">
+                <div class="col-md-6">
                     <div class="contact-form-wrapper">
                         <form action="POST">
                             <div class="row no-gutters">
@@ -158,6 +156,9 @@
                             </div>
                         </form>
                     </div>
+                </div>
+                <div class="col-md-6 form-side-img">
+                    <img src="img/envelop.png" class="tild-effect" data-tilt alt="envelop">
                 </div>
             </div>
            
