--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
     
 
     <script type="text/javascript" src="js/particles.js"></script>
