--- a/services.html
+++ b/services.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/lib/tilt.jquery.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
