Finished Desctop Version

--- a/career.html
+++ b/career.html
@@ -161,20 +161,20 @@
             <div class="row no-gutters core-value-wrapper">
                 <div class="col-md-4 core-value-item">
                     <h3 class="core-value-title">Move fast</h3>
-                    <div class="core-value-image">
+                    <div class="core-value-image tild-effect" data-tilt>
                         <img class="tild-effect" data-tilt src="img/move-fast.png" alt="Move fast">
                     </div>
                 </div>
                 <div class="col-md-4 core-value-item">
                     <h3 class="core-value-title">Make a brave decision</h3>
-                    <div class="core-value-image">
+                    <div class="core-value-image tild-effect" data-tilt>
                         <img class="tild-effect" data-tilt src="img/make-brave-decision.png" alt="Make a brave decision">
                     </div>
                 </div>
                 <div class="col-md-4 core-value-item">
                     <h3 class="core-value-title">Share your knowledge</h3>
-                    <div class="core-value-image">
-                        <img class="tild-effect" data-tilt src="img/share-ypu-knowladge.png" alt="Share your knowledge">
+                    <div class="core-value-image tild-effect" data-tilt>
+                        <img  src="img/share-ypu-knowladge.png" alt="Share your knowledge">
                     </div>
                 </div>
             </div>
