Finished Desctop Version

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
         </div>
     </header><!-- HEADER -->
     
-    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
+    <section class="page-title projects-title-bg" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
         <div class="page-titke-overlay">
             <div class="cj-container">
                 <h1>Projects</h1>
@@ -187,21 +187,21 @@
                         <div class="row">
                             <div class="col-12 partner-item">
                                 <a href="https://engagementtoken.com">
-                                    <img src="img/Engagement-Token-Logo-2.png" alt="paybis">
+                                    <img class="tild-effect" data-tilt src="img/Engagement-Token-Logo-2.png" alt="paybis">
                                 </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 partner-item">
                                 <a href="https://neuromation.io">
-                                    <img src="img/logo_2.svg" alt="microsoftazure">
+                                    <img class="tild-effect" data-tilt src="img/logo_2.svg" alt="microsoftazure">
                                 </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 partner-item">
                                 <a href="http://osadc.io">
-                                    <img src="img/osa.png" alt="growth">
+                                    <img class="tild-effect" data-tilt src="img/osa.png" alt="growth">
                                 </a>
                             </div>
                         </div>
