Finished Desctop Version

--- a/contacts.html
+++ b/contacts.html
@@ -13,12 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Jaldi:400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/services.css">
-    <link rel="stylesheet" href="css/contacts.css">
+
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -123,8 +118,8 @@
                     <div class="contact-form-wrapper">
                         <form action="POST">
                             <div class="row no-gutters">
-                                <div class="col-md-6">
-                                    <div class="cj-form-group contact-form-inputs">
+                                <div class="col-md-6 contact-form-inputs">
+                                    <div class="cj-form-group">
                                         <label class="cj-form-label" for="name">Your Name</label>
                                     <input class="contact-form-input" type="text" name="name" id="name" placeholder="Enter your name">
                                     <span class="focus-input"></span>
