--- a/projects.html
+++ b/projects.html
@@ -59,9 +59,9 @@
                         <li><a href="services.html">Services</a></li>
                         <li><a class="active-nav-item" href="projects.html">Projects</a></li>
                         <li><a href="partners.html">Partners</a></li>
-                        <li><a href="career.html">Carriers</a></li>
+                        <li><a href="career.html">Careers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="#">News</a></li>
+                        <li><a href="news.html">News</a></li>
                     </ul>
                 </nav>
                 <div class="header-lang-btn">
