Finished Desctop Version

--- a/contacts.html
+++ b/contacts.html
@@ -91,13 +91,13 @@
             <div class="row no-gutters addresses-wrapper">
                 <div class="col-md-6 address-item" data-css-animate="trigger">
                     <h2 class="section-header">CoinJapan KIEV</h2>
-                    <p id="mp0" class="address-line">Ukraine, 03067, Kiev, V. Gavela blvd, 4 office 20</p>
+                    <p id="mp0" class="address-line">Office 20, Vatslava Havela Boulevard, 4, Kiev, 03067, Ukraine</p>
                     <p class="email-line">gldmvl@gmail.com</p>
                     <p class="phone-line">+3897732129</p>
                 </div>
                 <div class="col-md-6 address-item" data-css-animate="trigger">
                     <h2 class="section-header">CoinJapan MINSK</h2>
-                    <p id="mp1" class="address-line">Belarus Republic, 22131, Minsk Gamarnikova St., 30, 258, 3/19</p>
+                    <p id="mp1" class="address-line">3/19, 258, Gamamika St., 30, Minsk, 22131, Belarus Republic</p>
                     <p class="email-line">gldmvl@gmail.com</p>
                     <p class="phone-line">+3897732129</p>
                 </div>
